# synovium

./: .gitignore  DESIGN.md  LICENSE  README.md  ROADMAP.md  app  go.mod  grammar.bnf  hx_nuke.sh  main.go  rule110.syn  test.syn
ast/: ast.go  clone.go
codegen/: builder.go  emit.go  funcs.go  jit.go  types.go
lexer/: lexer.go  lexer_test.go  token.go
lsp/: server.go
parser/: declarations.go  expressions.go  parser.go  statements.go  types.go
samples/: Matrix.syn  Vec2.syn  fib.syn  file.syn  main_test.syn  op_err.syn  opload.syn  out.ll  rule110.syn  runall.sh  (+4 more)
tree-sitter-synovium/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  main.syn  package-lock.json  package.json  pom.xml  pyproject.toml  setup.py  test.syn  tree-sitter.json
tree-sitter-synovium/bindings/c/: tree-sitter-tree-sitter-synovium.pc.in
tree-sitter-synovium/bindings/go/: binding.go  binding_test.go
tree-sitter-synovium/bindings/java/main/io/github/treesitter/jtreesitter/treesittersynovium/: TreeSitterTreeSitterSynovium.java
tree-sitter-synovium/bindings/java/test/: TreeSitterTreeSitterSynoviumTest.java
tree-sitter-synovium/bindings/node/: binding.cc  index.d.ts  index.js
tree-sitter-synovium/bindings/python/tests/: test_binding.py
tree-sitter-synovium/bindings/python/tree_sitter_tree_sitter_synovium/: __init__.py  binding.c
tree-sitter-synovium/bindings/rust/: build.rs  lib.rs
tree-sitter-synovium/bindings/swift/TreeSitterTreeSitterSynovium/: tree_sitter_synovium.h
tree-sitter-synovium/bindings/swift/TreeSitterTreeSitterSynoviumTests/: TreeSitterTreeSitterSynoviumTests.swift
tree-sitter-synovium/bindings/zig/: root.zig  test.zig
tree-sitter-synovium/src/: grammar.json  node-types.json  parser.c
(+12 files in other folders)
