[package]
name = "tree-sitter-tree-sitter-synovium"
description = "Treesitter parser for Synovium"
version = "0.1.0"
authors = ["Dr-42 <royspandan1@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tree-sitter-synovium"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-tree_sitter_synovium"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.5"
