[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-tree-sitter-synovium"
description = "Treesitter parser for Synovium"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "tree-sitter-synovium"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Dr-42", email = "royspandan1@gmail.com" }]
requires-python = ">=3.10"
license.text = "BSD-2-Clause"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-tree_sitter_synovium"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
